--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,35 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+"env": {
+  "browser": true,
+  "es6": true
+},
+"parser": "@typescript-eslint/parser",
+"parserOptions": {
+  "ecmaVersion": 2020,
+  "sourceType": "module",
+  "ecmaFeatures": {
+    "jsx": true
+  }
+},
+"settings": {
+  "react":{
+    "version":"detect"
+  }
+},
+"extends": ["plugin:react/recommended","plugin:@typescript-eslint/recommended","plugin:prettier/recommended"],
+"rules": {
+  "prettier/prettier": ["error",{
+    "endOfLin": "auto"
+  }],
+  "camelcas": "off",
+    "import/prefer-default-export": "off",
+    "react/prop-types": "off",
+    "react/jsx-filename-extension": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/no-unused-prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/require-default-props": "off",
+    "react/display-name":"off"
+    // "@typescript-eslint/no-explicit-any": "off"
+}
 }
